[package]
name = "journalcloud"
version = "0.1.0"
authors = ["Patrik Karlin <patrik.karlin@gmail.com>"]

[dependencies]
serde_json = "1.0"
log = "~0.4"
rusoto_core = "0.31.0"
rusoto_logs = "0.31.0"
hyper = "0.10.0"
time = "0.1.39"
env_logger = "0.5.3"

[dependencies.systemd]
git = "https://github.com/jmesmon/rust-systemd"
